--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -7210,46 +7210,78 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 넥슨 입사문제 중에서\n",
+    "어떤 자연수 n이 있을 때, d(n)을 n의 각 자릿수 숫자들과 n 자신을 더한 숫자라고 정의하자.\n",
+    "\n",
+    "예를 들어\n",
+    "```\n",
+    "d(91) = 9 + 1 + 91 = 101\n",
+    "```\n",
+    "이 때, n을 d(n)의 제네레이터(generator)라고 한다. 위의 예에서 91은 101의 제네레이터이다.\n",
+    "\n",
+    "어떤 숫자들은 하나 이상의 제네레이터를 가지고 있는데, 101의 제네레이터는 91 뿐 아니라 100도 있다. 그런데 반대로, 제네레이터가 없는 숫자들도 있으며, 이런 숫자를 인도의 수학자 Kaprekar가 셀프 넘버(self-number)라 이름 붙였다. 예를 들어 1,3,5,7,9,20,31 은 셀프 넘버 들이다.\n",
+    "\n",
+    "1 이상이고 5000 보다 작은 모든 셀프 넘버들의 합을 구하라.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1227365\n"
+     ]
+    }
+   ],
    "source": [
-    "---"
+    "def generator(num):\n",
+    "    num_ = str(num)\n",
+    "    result = eval('+'.join(num_)+'+'+num_)\n",
+    "    return result\n",
+    "\n",
+    "self_num = [0]\n",
+    "\n",
+    "while self_num[-1] <= 5000:\n",
+    "    for i in range(5000):\n",
+    "        if generator(i) > 5000: break\n",
+    "        self_num.append(generator(i))\n",
+    "            \n",
+    "# print(self_num)\n",
+    "ref = set(range(1, 5001))\n",
+    "print(sum(ref-set(self_num)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "### 한줄 코드"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1227365"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "---"
+    "sum(set(range(1, 5000)) - {x + sum([int(a) for a in str(x)]) for x in range(1, 5000)})"
    ]
   },
   {
@@ -7262,14 +7294,204 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 구글 입사문제 중에서\n",
+    "1부터 10,000까지 8이라는 숫자가 총 몇번 나오는가?\n",
+    "\n",
+    "8이 포함되어 있는 숫자의 갯수를 카운팅 하는 것이 아니라 8이라는 숫자를 모두 카운팅 해야 한다.\n",
+    "\n",
+    "(※ 예를들어 8808은 3, 8888은 4로 카운팅 해야 함)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4000\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnt = 0\n",
+    "\n",
+    "for i in range(1, 10001):\n",
+    "    for k in str(i):\n",
+    "        if k == '8':\n",
+    "            cnt += 1\n",
+    "        \n",
+    "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primary Arithmetic\n",
+    "**첫 번째 계산**\n",
+    "\n",
+    "아이들은 여러 자리 숫자들을 더하기 위해서 우에서 좌로 숫자를 하나씩 차례대로 더 하라고 배웠다. 1을 한 숫자 위치에서 다음 자리로 더하기위해 이동하는 \"한자리올림\"연산을 많이 발견하는 것은 중요한 도전이 된다. 당신의 일은 교육자가 그들의 어려움을 평가하기 위하여, 덧셈 문제들의 각 집합에 대해서 한자리올림 연산들의 수를 계산하는 것이다.\n",
+    "\n",
+    "**입력**\n",
+    "\n",
+    "입력의 각 라인은 10개의 숫자들보다 미만인 양의 정수들 두 개를 포함한다. 입력의 마지막 라인은 0 0 을 포한한다.\n",
+    "\n",
+    "**출력**\n",
+    "\n",
+    "마지막을 제외한 입력의 각 라인에 대해서 당신은 두 숫자들을 더한 결과에서 한자리올림 연산들의 수를 아래 처럼 보여지는 형식으로 계산하여 출력해야 한다.\n",
+    "\n",
+    "입력 샘플\n",
+    "```\n",
+    "123 456\n",
+    "555 555\n",
+    "123 594\n",
+    "0 0\n",
+    "```\n",
+    "출력 샘플\n",
+    "```\n",
+    "No carry operation.\n",
+    "3 carry operations.\n",
+    "1 carry operation.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 1 99999\n",
+      "1 carry operation\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnt = 0\n",
+    "\n",
+    "numbers = input('>>> ')\n",
+    "numbers = numbers.split(' ')\n",
+    "\n",
+    "if len(numbers[0]) >= len(numbers[1]):\n",
+    "    for i in range(len(numbers[1])-1, -1, -1):\n",
+    "        if eval(numbers[0][i] +'+'+ numbers[1][i])+cnt >= 10:\n",
+    "            cnt += 1\n",
+    "            \n",
+    "elif len(numbers[0]) <= len(numbers[1]):\n",
+    "    for i in range(len(numbers[0])-1, -1, -1):\n",
+    "        if eval(numbers[0][i] +'+'+ numbers[1][i])+cnt >= 10:\n",
+    "            cnt += 1\n",
+    "                \n",
+    "if cnt == 0:\n",
+    "    print('No carry operation')\n",
+    "elif cnt == 1:\n",
+    "    print('1 carry operation')\n",
+    "else:\n",
+    "    print(f'{cnt} carry operations')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 9 99999999\n",
+      "8 carry operations\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnt = 0\n",
+    "\n",
+    "numbers = input('>>> ')\n",
+    "numbers = numbers.split(' ')\n",
+    "num_1, num_2 = numbers\n",
+    "\n",
+    "if len(num_1) >= len(num_2):\n",
+    "#     num_2 = '0'*(len(num_1)-len(num_2)) + num_2\n",
+    "    result = str(eval(num_1+'+'+num_2))\n",
+    "    \n",
+    "    for i in range(len(num_1)-1, -1, -1):\n",
+    "        if int(result[i]) < int(num_1[i]):\n",
+    "            cnt += 1\n",
+    "            \n",
+    "elif len(num_1) <= len(num_2):\n",
+    "#     num_1 = '0'*(len(num_2)-len(num_1)) + num_1\n",
+    "    result = str(eval(num_1+'+'+num_2))\n",
+    "    \n",
+    "    for i in range(len(num_2)-1, -1, -1):\n",
+    "        if int(result[i]) < int(num_2[i]):\n",
+    "            cnt += 1\n",
+    "            \n",
+    "if cnt == 0:\n",
+    "    print('No carry operation')\n",
+    "elif cnt == 1:\n",
+    "    print('1 carry operation')\n",
+    "else:\n",
+    "    print(f'{cnt} carry operations')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 1 99999\n",
+      "5\n",
+      ">>> 123 456\n",
+      "0\n",
+      ">>> 123 4567\n",
+      "1\n",
+      ">>> 0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import log10\n",
+    "\n",
+    "a, b = map(int, input('>>> ').split())\n",
+    "\n",
+    "while all((a,b)):  # 둘 중 하나라도 false값이 없을 때\n",
+    "    print(sum([(lambda x : (a%x + b%x)//x)(10**(n+1)) for n in range(int(max(log10(a),log10(b)))+1)]))  # 큰 수의 자리 수에 비례해서 [10 100 1000 10000 ...] -> lambda함수의 x에 들어감\n",
+    "    ## a와 b를 10, 100, 1000 으로 나누면서 나머지만 서로 더한 후 자리수가 올라가면 자리수 올림이 이루어진다고 볼 수 있다. (다시 10, 100, 1000으로 나눈 몫)\n",
+    "    a, b = map(int, input('>>> ').split())"
+   ]
   },
   {
    "cell_type": "markdown",
